--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
+    "striptags": "^3.2.0",
     "swiper": "^11.0.3"
   },
   "devDependencies": {
